client/assets/css/main.css
.sprint_bg_color{
    background-color: #FEE100;
}

/* Customize Spacing */
.mt-10p{
    margin-top: 10%;
}
.mb-10p{
    margin-bottom: 10%;
}
.ml-10p{
    margin-left: 10%;
}
.mr-10p{
    margin-right: 10%;
}

.add-input-text{
    cursor: pointer;
}

.row-eq-height {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display:         flex;
  }

.v-align{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

